# skillCppTestSuite

./: .gitignore  CMakeLists.txt  testsuites  testsuites_src
lib/skill.cpp.common/: CMakeLists.txt
lib/skill.cpp.common/skill/: common.h  utils.h
lib/skill.cpp.common/skill/api/: AbstractField.cpp  AbstractField.h  Arrays.h  Box.h  Maps.h  Object.cpp  Object.h  Sets.h  SkillException.cpp  SkillException.h  SkillFile.cpp  SkillFile.h  String.cpp  String.h  StringAccess.cpp  StringAccess.h  types.h
lib/skill.cpp.common/skill/concurrent/: ThreadPool.cpp  ThreadPool.h
lib/skill.cpp.common/skill/fieldTypes/: AnnotationType.h  BuiltinFieldType.cpp  BuiltinFieldType.h  FieldType.cpp  FieldType.h
lib/skill.cpp.common/skill/internal/: AbstractStoragePool.cpp  AbstractStoragePool.h  BasePool.cpp  BasePool.h  Book.h  DistributedField.cpp  DistributedField.h  FieldDeclaration.cpp  FieldDeclaration.h  FileParser.h  FileStructure.h  FileWriter.cpp  FileWriter.h  LazyField.cpp  LazyField.h  ParseException.h  SkillState.cpp  SkillState.h  StoragePool.cpp  StoragePool.h  StringPool.cpp  StringPool.h  SubPool.cpp  SubPool.h  ThreadPool.cpp  ThreadPool.h  UnknownBasePool.cpp  UnknownBasePool.h  UnknownObject.cpp  UnknownObject.h  UnknownSubPool.h  UnknownSubPool.implementation.h
lib/skill.cpp.common/skill/iterators/: AllObjectIterator.h  DynamicDataIterator.h  DynamicNewInstancesIterator.h  StaticDataIterator.h  TypeHierarchyIterator.h  TypeOrderIterator.h
lib/skill.cpp.common/skill/restrictions/: FieldRestriction.cpp  FieldRestriction.h  TypeRestriction.h
lib/skill.cpp.common/skill/streams/: FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  InStream.h  MappedInStream.cpp  MappedInStream.h  MappedOutStream.h  SparseArray.h  Stream.h
test/age/: AgeReadTest.cpp  AgeWriteTest.cpp
test/common/: utils.h
test/custom/: CustomFieldTest.cpp
test/subtypes/: ReadTest.cpp
test/user/: UserWriteTest.cpp
